fixed logging